<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        style="@style/header_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" >

        <ImageView
            android:id="@+id/imageView1"
            style="@style/header_images_style_left"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true" />

        <ImageView
            android:id="@+id/imageView2"
            style="@style/header_images_style_right"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />

        <TextView
            android:id="@+id/textView1"
            style="@style/header_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/header_txt" />
        
        <TextView
            android:id="@+id/textView2"
            style="@style/cust_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="23dp"
            android:text="@string/app_version"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewheader_pen_challans_xml"
            style="@style/cust_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageView2"
            android:layout_centerHorizontal="true"
            android:text="@string/sub_header_txt"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textView3"
        style="@style/navi_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/header_grnt_padding_ten"
        android:text="@string/version_details"
        android:textSize="30sp" 
        android:textStyle="bold"/>


    <ListView
        android:id="@+id/version_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/header_grnt_padding_ten"
        android:background="@drawable/transbg_style"
        android:divider="@color/navi_color"
        android:layout_below="@+id/textView3"
        android:dividerHeight="0.5dp" >
    </ListView>

    
    <ImageView
        android:id="@+id/imagefd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
         android:layout_alignParentBottom="true"
        android:src="@drawable/footer"/>

</RelativeLayout>