<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="500dp"
    android:layout_height="250dp"
    android:gravity="top"
    android:background="#ffffff"
    android:orientation="vertical" >
    
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="50dp"
    android:layout_marginTop="0dp"
    android:background="#FC0303"
    android:gravity="center"
    android:orientation="horizontal"
    android:weightSum="1" >
    
    <ImageView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:contentDescription="@null"
        android:src="@drawable/exit_logo"
        android:layout_weight="0.05"/>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.9"
        android:gravity="center"
        android:text="@string/fake_vehicle"
        android:textColor="#ffffff"
        android:textSize="22sp"
        android:textStyle="bold" >

    </TextView>
    
     <ImageView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:layout_weight="0.05"
        android:src="@drawable/exit_logo"/>
    
</LinearLayout>
    
    <TextView
        android:id="@+id/otp_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/enter_last_fiv_dig_chass_no"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#000000"
        android:textSize="22sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/last_chasisNo_input"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:hint="@string/enter_last_fiv_dig_chass_no"
        android:inputType="textCapCharacters"
        android:maxLength="5"
        android:textSize="20sp" >

        <requestFocus />

    </EditText>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1" >
        
<!--         <Button
            android:id="@+id/cancel_dialog"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_weight="0.5"
            android:background="#FFFF0000"
            android:text="@string/cancel"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />
        
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" ">
            
        </TextView> -->
        
        <Button
            android:id="@+id/ok_dialog"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_weight="0.5"
            android:background="#FFFF0000"
            android:text="@string/okkk"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>
